# api-exercise

./: .env.docker  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
src/: config.rs  errors.rs  main.rs  validate.rs
src/handlers/: health.rs  mod.rs  post.rs  url.rs
src/tests/: health.rs  mod.rs  post.rs
