[package]
name = "api-exercise"
version = "0.1.0"
authors = ["Logan Smith <contact@logansmith.net"]
readme = "README.md"
keywords = ["axum", "framework"]
repository = "https://github.com/logan-smith/api-exercise"
license = "MIT"
edition = "2018"

[dependencies]
argon2rs = "0.2.1"
axum = "0.6.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
dotenv = "0.15.0"
envy = "0.4"
http = "0.2.8"
lazy_static = "1.4"
log = "0.4"
rayon = "1.5.3"
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.79"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"
